--- a/Ejercicio1/index.html
+++ b/Ejercicio1/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
  <head> 
-   <title>Ejercicio 1.1:Utilización de variables</title>
+   <title>Ejercicio 1.1:Utilización de variables</tittle>
+   <meta charset="utf-8">
  </head> 
  <body>
      <h1>Calcular el volumen y el área</h1>
-     <script> src="index.js"</script>
+     <script src="index.js"></script>
  </body>
 </html>
