--- a/Ejercicio3/index.html
+++ b/Ejercicio3/index.html
@@ -6,6 +6,6 @@
  </head> 
  <body>
      <h1>Operaciones con arrays</h1>
-     <script> src="index.js"</script>
+     <script src="index.js"></script>
  </body>
 </html>
