--- a/Ejercicio1/index.html
+++ b/Ejercicio1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head> 
-   <title>Ejercicio 1.1:Utilización de variables</tittle>
+   <title>Ejercicio 1.1:Utilización de variables</title>
    <meta charset="utf-8">
  </head> 
  <body>
