--- a/Ejercicio3/index.html
+++ b/Ejercicio3/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head> 
-   <title>Ejercicio 1.3:Operaciones con arrays</tittle>
+   <title>Ejercicio 1.3:Operaciones con arrays</title>
    <meta charset="utf-8">
  </head> 
  <body>
